// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Js Plugin Execution - augmentResourceHash 1`] = `
[
  "FARM_RUNTIME_runtime",
  "index.7de09772.js",
]
`;

exports[`Js Plugin Execution - augmentResourceHash 2`] = `
{
  "custom": {},
  "data": {
    "dynamicImports": [],
    "exports": [],
    "importedBindings": {},
    "imports": [],
    "isDynamicEntry": false,
    "isEntry": true,
    "isImplicitEntry": false,
  },
  "id": "index_eab4_js",
  "map": null,
  "moduleIds": [
    "index.ts?foo=bar",
  ],
  "modules": {
    "index.ts?foo=bar": {
      "id": "index.ts?foo=bar",
      "originalLength": 51,
      "renderedContent": "function e(e,r,u,n){r.default="render-resource-pot-return-value",e._m(r);}",
      "renderedLength": 74,
      "renderedMap": null,
    },
  },
  "name": "index_eab4",
  "resourcePotType": "js",
}
`;

exports[`Js Plugin Execution - augmentResourceHash 3`] = `
[
  "FARM_RUNTIME_runtime",
  "index.085ee3b9.js",
]
`;
